<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fdgproject.firedge.myinmobiliaria.Formulario"
    android:background="@drawable/shape_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_titulo"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_localidad"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/et_localidad" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_direccion"
        android:layout_below="@+id/et_localidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_localidad"
        android:layout_alignEnd="@+id/et_localidad"
        android:hint="@string/et_direccion" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_precio"
        android:layout_below="@+id/et_direccion"
        android:layout_alignRight="@+id/et_direccion"
        android:layout_alignEnd="@+id/et_direccion"
        android:hint="@string/et_precio" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_tipo"
        android:layout_alignTop="@+id/et_precio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/et_precio"
        android:layout_toStartOf="@+id/et_precio" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_aceptar"
        android:id="@+id/bt_aceptar"
        android:onClick="aceptar_bt"
        android:layout_below="@+id/sp_tipo"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar"
        android:id="@+id/bt_cancel"
        android:layout_alignTop="@+id/bt_aceptar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="cancelar_bt" />

</RelativeLayout>
